package model.dao;

public class DatabaseManager {
}
