package model.dao;

public class GameDAO {
}
