package model.dao;

public class PlayerDAO {
}
