@startuml ClassDiagram_ViewController

' ============================================================
'  JEU DE DAMES — DIAGRAMME 2/2 : VIEW + CONTROLLER + PERSISTENCE
'  Architecture : JavaFX + Scene Builder (FXML)
' ============================================================

skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 60
skinparam shadowing false
skinparam roundCorner 10
skinparam classAttributeIconSize 0
hide circle

skinparam class {
    FontSize 13
    FontStyle bold
    AttributeFontSize 11
    BorderThickness 1.5
    BackgroundColor<<view>>       #FDEDEC
    BorderColor<<view>>           #CB4335
    BackgroundColor<<controller>> #E9F7EF
    BorderColor<<controller>>     #229954
    BackgroundColor<<persist>>    #F4ECF7
    BorderColor<<persist>>        #7D3C98
}

title <size:17><b>Jeu de Dames — Diagramme de Classes (2/2)</b></size>\n<size:11>Couches VIEW, CONTROLLER et PERSISTENCE — JavaFX + FXML</size>\n

' ============ VUES FXML ============
note as FXMLNote
  <b>Vues FXML</b> (Scene Builder)
  Ces fichiers ne sont pas des classes Java.
  Chaque .fxml déclare son contrôleur via fx:controller.
  ──────────────────────────────────
  • MenuView.fxml      → MenuController
  • LoginView.fxml     → LoginController
  • GameView.fxml      → GameController
  • ScoresView.fxml    → ScoresController
  • EndGameView.fxml   → EndGameController
end note

' ============ VIEW ============
class BoardView <<view>> {
    - {static} TAILLE_CASE : int = 72
    - {static} TAILLE_PIECE : int = 56
    - cases : StackPane[][]
    - caseSelectionnee : Position
    - casesJouables : Set<Position>
    - departGlisser : Position
    --
    + rafraichir(plateau) : void
    + marquerSelection(pos) : void
    + marquerCoups(positions) : void
    + effacerMarques() : void
    + glisserPiece(depart, arrivee) : void
    + signalerCaptures(positions) : void
    + arreterAlerteCapture() : void
}

interface BoardViewListener <<view>> {
    + onCaseCliquee(pos) : void
    + onPieceGlissee(depart, arrivee) : void
}

' ============ CONTROLLER ============
class AppController <<controller>> {
    - fenetre : Stage
    --
    + afficherMenu() : void
    + afficherConfig(mode) : void
    + afficherPartie(nomJoueur1, nomJoueur2, mode) : void
    + afficherScores() : void
    + afficherFin(nomGagnant) : void
}

class MenuController <<controller>> {
    - appController : AppController
    --
    + definirAppController(ac) : void
    + jouerContreHumain() : void
    + jouerContreIA() : void
    + afficherScores() : void
    + quitter() : void
}

class LoginController <<controller>> {
    - appController : AppController
    + champNom : TextField
    + champNom2 : TextField
    + boiteJoueur2 : VBox
    + listeMode : ComboBox
    + labelErreur : Label
    --
    + definirAppController(ac) : void
    + definirMode(mode) : void
    + confirmer() : void
    - majChampJoueur2() : void
}

class GameController <<controller>> {
    - appController : AppController
    - partie : Game
    - vuePlateau : BoardView
    - caseSelectionnee : Position
    - iaReflechit : boolean
    + conteneurPlateau : StackPane
    + labelJoueurCourant : Label
    + labelMinuteur : Label
    + boutonAbandon : Button
    --
    + definirAppController(ac) : void
    + demarrerPartie(nom1, nom2, mode) : void
    + onCaseCliquee(pos) : void
    + onPieceGlissee(depart, arrivee) : void
    + jouerTourIA() : void
    + terminerPartie() : void
    - majInterface() : void
}

class ScoresController <<controller>> {
    - appController : AppController
    - tableauScores : TableView<ScoreEntry>
    - colNom : TableColumn
    - colParties : TableColumn
    - colVictoires : TableColumn
    - colPoints : TableColumn
    --
    + definirAppController(ac) : void
    + initialize() : void
    + retour() : void
}

class EndGameController <<controller>> {
    - appController : AppController
    + labelResultat : Label
    --
    + definirAppController(ac) : void
    + definirGagnant(nomGagnant) : void
    + rejouer() : void
    + retournerAuMenu() : void
}

' ============ PERSISTENCE ============
class DatabaseManager <<persist>> {
    - {static} connexion : Connection
    --
    + {static} getConnexion() : Connection
}

class PlayerDAO <<persist>> {
    + {static} ajouterJoueur(nom) : void
    - {static} joueurExiste(nom) : boolean
}

class GameDAO <<persist>> {
    + {static} enregistrerPartie(joueur1, joueur2, gagnant, mode) : void
}

class ScoreDAO <<persist>> {
    + getMeilleursScores() : List<ScoreEntry>
    + mettreAJourScore(nom, victoire) : void
}

class ScoreEntry <<persist>> {
    - nom : StringProperty
    - partiesJouees : IntegerProperty
    - victoires : IntegerProperty
    - points : IntegerProperty
    --
    + getNom() : String
    + getPartiesJouees() : int
    + getVictoires() : int
    + getPoints() : int
    + nomProperty() : StringProperty
    + partiesJoueesProperty() : IntegerProperty
    + victoiresProperty() : IntegerProperty
    + pointsProperty() : IntegerProperty
}

' --- Relations : implémentation ---
BoardViewListener <|.. GameController

' --- Relations : BoardView ---
GameController --> BoardView         : rafraîchit
BoardView      --> BoardViewListener : notifie (listener injecté via constructeur)

' --- Relations : navigation via AppController ---
MenuController    --> AppController : navigue
LoginController   --> AppController : navigue
GameController    --> AppController : navigue
EndGameController --> AppController : navigue
ScoresController  --> AppController : navigue

note top of AppController
  <b>Routeur central</b>
  Charge les FXML via FXMLLoader,
  injecte this dans chaque contrôleur,
  gère les transitions d'écran via Stage.setScene().
end note

note bottom of DatabaseManager
  <b>Connexion statique partagée</b>
  (pattern Singleton sans getInstance).
  Identifiants lus depuis config.properties.
end note

note right of BoardView
  <b>Vue programmatique (pas FXML)</b>
  Extends GridPane. Affiche les cases
  (StackPane) et pions (ImageView), et
  anime le glissement (TranslateTransition).
  Aucune règle métier ici.
end note

legend bottom
  <back:#FDEDEC>   </back> View (JavaFX)   <back:#E9F7EF>   </back> Controller (@FXML)   <back:#F4ECF7>   </back> Persistence   <back:#FEF9E7>   </back> Vues FXML (fichiers XML)
  ──▷ Héritage   ┄┄▷ Implémentation   ──> Association   ◆── Composition
endlegend

@enduml
